--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
 <!-- Seu HTML aqui! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>e-commerce</title>
+</head>
+<body>
+<div><!-- Menu-->
+    <header class="menu">
+        <div class="container">
+            <div class="menu-flex">
+            <div class="menu-column">
+            <h1 class="logo"> <img src="./img/TechShop.jpg" alt=""></h1>
+            <nav class="menu-nav">
+        <ul>
+            <li><a href="">Televisões</a></li>
+            <li><a href="">Celulares</a></li>
+            <li><a href="">Eletrodomésticos</a></li>
+            <li><a href="">Informática</a></li>
+        </ul>
+        </nav>
+        </div>
+            <div class="menu-column menu-second-column">
+            <a href="" class="menu-link-button">Promoções</a>
+</div>
+</div>
+</div>
+</header>
+</div> 
+<!--Corpo do site-->
+<section class="container">
+    <div class="BoxMain">
+        <div class="boxItem">
+            <img src="./img/smarttv.jpg" alt="smarttv" class="center">
+            <p>Smart TV 50" UHD 4K Kenzie 50AU7700, Processador Crystal 4K, Tela...</p>
+            <p>R$ 2.000,00</p>
+            <a href="" class="menu-link-button" >Adicionar ao carrinho</a>
+        </div> 
+        <div class="boxItem">
+            <img src="./img/notebook.jpg" alt="notebook" class="center2">  
+            </header>
+            <p>Notebook Kenzie - i3501-M10P 15.6” HD 11ª Geração Intel Pentium Gold 4GB 128...</p>
+            <p>R$ 4.600,00</p>
+            <a href="" class="menu-link-button">Adicionar ao carrinho</a>
+        </div>
+        <div class="boxItem">
+            <img src="./img/arcondicionado.jpg" alt="arcondicionado" class="center3">
+            <p>Ar Condicionado Split Kenzie 12.000 BTUs Springer Midea Frio - 220 Volts</p>
+            <p>R$ 2.000,00</p>
+            <a href="" class="menu-link-button">Adicionar ao carrinho</a>
+        </div> 
+            <div class="boxItem">
+            <img src="./img/geladeira.jpg" alt="geladeira" class="center4">
+            <p>Geladeira Kenzie BRM44HK Frost Free Duplex com Compartimento Extrafrio e</p>
+            <p>R$ 2.568,40 </p>
+            <a href="" class="menu-link-button">Adicionar ao carrinho</a>
+        </div> 
+    </div>
+    <div class="BoxMain">
+            <div class="boxItem">
+            <img src="./img/smartphone.jpg" alt="smartphone" class="center5">
+            <p>Smartphone Kenzie Brasil A03 Core Preto 32GB, Câmera Traseira 8 MP, Tela...</p>
+            <p>R$ 2.000,00</p>
+            <a href="" class="menu-link-button">Adicionar ao carrinho</a>
+        </div> 
+            <div class="boxItem">
+            <img src="./img/fritadeira.jpg" alt="fritadeira" class="center6">
+            <p>Fritadeira Elétrica sem Óleo/Air Fryer  - Family-IV AF-30I Preta 3,5L</p>
+            <p>R$ 400,00</p>
+            <a href="" class="menu-link-button">Adicionar ao carrinho</a>
+        </div> 
+            <div class="boxItem">
+            <img src="./img/monitor.jpg" alt="monitor" class="center7">
+            <p>Smart TV LED 43” Full HD AOC Roku 43S5195/78 com Wi-fi, Controle...</p>
+            <p>R$ 1.870,00</p>
+            <a href="" class="menu-link-button">Adicionar ao carrinho</a>
+        </div>
+            <div class="boxItem">
+            <img src="./img/cadeiragamer.jpg" alt="cadeiragamer" class="center8">
+            <p>Cadeira Gamer Giratória Red System com Apoio Cabeça Frisokar Preta</p>
+            <p>R$ 1.240,00</p>
+            <a href="" class="menu-link-button" >Adicionar ao carrinho</a> 
+        </div> 
+    </div>
+
+
+<!--Final do corpo-->
+</section>
+</body>
+</html>
