--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <title>e-commerce</title>
 </head>
 <body>
-<div><!-- Menu-->
+<div>
     <header class="menu">
         <div class="container">
             <div class="menu-flex">
             <div class="menu-column">
-            <h1 class="logo"> <img src="./img/TechShop.jpg" alt=""></h1>
+            <h1 class="logo"> <img src="./pictures/TechShop.jpg" alt=""></h1>
             <nav class="menu-nav">
         <ul>
             <li><a href="">Televisões</a></li>
@@ -35,26 +35,26 @@
 <section class="container">
     <div class="BoxMain">
         <div class="boxItem">
-            <img src="./img/smarttv.jpg" alt="smarttv" class="center">
+            <img src="./pictures/smarttv.jpg" alt="smarttv" class="center">
             <p>Smart TV 50" UHD 4K Kenzie 50AU7700, Processador Crystal 4K, Tela...</p>
             <p>R$ 2.000,00</p>
             <a href="" class="menu-link-button" >Adicionar ao carrinho</a>
         </div> 
         <div class="boxItem">
-            <img src="./img/notebook.jpg" alt="notebook" class="center2">  
+            <img src="./pictures/notebook.jpg" alt="notebook" class="center2">  
             </header>
             <p>Notebook Kenzie - i3501-M10P 15.6” HD 11ª Geração Intel Pentium Gold 4GB 128...</p>
             <p>R$ 4.600,00</p>
             <a href="" class="menu-link-button">Adicionar ao carrinho</a>
         </div>
         <div class="boxItem">
-            <img src="./img/arcondicionado.jpg" alt="arcondicionado" class="center3">
+            <img src="./pictures/arcondicionado.jpg" alt="arcondicionado" class="center3">
             <p>Ar Condicionado Split Kenzie 12.000 BTUs Springer Midea Frio - 220 Volts</p>
             <p>R$ 2.000,00</p>
             <a href="" class="menu-link-button">Adicionar ao carrinho</a>
         </div> 
             <div class="boxItem">
-            <img src="./img/geladeira.jpg" alt="geladeira" class="center4">
+            <img src="./pictures/geladeira.jpg" alt="geladeira" class="center4">
             <p>Geladeira Kenzie BRM44HK Frost Free Duplex com Compartimento Extrafrio e</p>
             <p>R$ 2.568,40 </p>
             <a href="" class="menu-link-button">Adicionar ao carrinho</a>
@@ -62,25 +62,25 @@
     </div>
     <div class="BoxMain">
             <div class="boxItem">
-            <img src="./img/smartphone.jpg" alt="smartphone" class="center5">
+            <img src="./pictures/smartphone.jpg" alt="smartphone" class="center5">
             <p>Smartphone Kenzie Brasil A03 Core Preto 32GB, Câmera Traseira 8 MP, Tela...</p>
             <p>R$ 2.000,00</p>
             <a href="" class="menu-link-button">Adicionar ao carrinho</a>
         </div> 
             <div class="boxItem">
-            <img src="./img/fritadeira.jpg" alt="fritadeira" class="center6">
+            <img src="./pictures/fritadeira.jpg" alt="fritadeira" class="center6">
             <p>Fritadeira Elétrica sem Óleo/Air Fryer  - Family-IV AF-30I Preta 3,5L</p>
             <p>R$ 400,00</p>
             <a href="" class="menu-link-button">Adicionar ao carrinho</a>
         </div> 
             <div class="boxItem">
-            <img src="./img/monitor.jpg" alt="monitor" class="center7">
+            <img src="./pictures/monitor.jpg" alt="monitor" class="center7">
             <p>Smart TV LED 43” Full HD AOC Roku 43S5195/78 com Wi-fi, Controle...</p>
             <p>R$ 1.870,00</p>
             <a href="" class="menu-link-button">Adicionar ao carrinho</a>
         </div>
             <div class="boxItem">
-            <img src="./img/cadeiragamer.jpg" alt="cadeiragamer" class="center8">
+            <img src="./pictures/cadeiragamer.jpg" alt="cadeiragamer" class="center8">
             <p>Cadeira Gamer Giratória Red System com Apoio Cabeça Frisokar Preta</p>
             <p>R$ 1.240,00</p>
             <a href="" class="menu-link-button" >Adicionar ao carrinho</a> 
